[package]
name = "advanced_funcs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
sha256 = "1.0.3"
rocket = { version = "0.5.0-rc.2" }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread", "time"] }