[package]
name = "advanced_funcs_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# // Primary Dependencies
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

# // Secondary Dependencies
lazy_static = "1.4.0"
base64 = "0.13.0"
sha256 = "1.0.3"